force-app/main/default/objects/Warranty__c/Warranty__c.object-meta.xml
<CustomObject>
    <label>보증</label>
    <nameField>
        <label>보증 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>보증</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>