force-app/main/default/objects/Warranty__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>자동 수식 필드</description>
    <formula>ADDMONTHS( Registration_Date__c , Warranty_Period__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>만료 일자</label>
    <type>Date</type>
</CustomField>