force-app/main/default/objects/Warranty__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>보증 시작 일자</description>
    <label>등록 일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>