force-app/main/default/objects/Warranty__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <displayFormat>W-{0000}</displayFormat>
    <label>Warranty_ID</label>
    <type>AutoNumber</type>
</CustomField>