force-app/main/default/objects/Warranty__c/fields/Warranty_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Coverage__c</fullName>
    <label>보증 대상</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>기본 부품 보증</fullName>
            </value>
            <value>
                <fullName>제조상의 결함 보증</fullName>
            </value>
            <value>
                <fullName>타이어 보증</fullName>
            </value>
            <value>
                <fullName>연장 보증</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>