force-app/main/default/objects/Warranty__c/fields/Warranty_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Mileage__c</fullName>
    <label>보증 주행거리</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>