force-app/main/default/objects/Warranty__c/fields/Warranty_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>관련 고객</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>보증</relationshipLabel>
    <relationshipName>Warranty_Related_Account_btw5</relationshipName>
    <type>Lookup</type>
</CustomField>