force-app/main/default/objects/Warranty__c/fields/Warranty_Related_Asset__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Related_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>연결 자산</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>보증</relationshipLabel>
    <relationshipName>Warranty_Related_Asset_2DZ3</relationshipName>
    <type>Lookup</type>
</CustomField>