force-app/main/default/objects/Warranty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Warranty_Related_Account__c</columns>
    <columns>Warranty_Related_Asset__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>